@startuml CLASS_04_KEGIATAN_PROKER_PIKET
!theme plain
title Class Diagram - Kegiatan, Program Kerja & Piket (v2 - Updated Feb 2026)

' ============================================================
' PROGRAM KERJA
' ============================================================
class Proker {
  # id : uuid <<PK>>
  --
  + kepengurusan_lab_id : uuid <<FK>>
  + struktur_id : uuid <<FK>>
  + nama_proker : string
  + deskripsi : text
  + tujuan : text
  + sasaran : text
  + output_kegiatan : text
  + status : enum {belum_mulai, sedang_berjalan, selesai, ditunda}
  + status_pengajuan : string {draft, diajukan, disetujui, ditolak}
  + tanggal_mulai : date
  + tanggal_selesai : date
  + keterangan : text
  + kendala : text
  + solusi : text
  + saran : text
  + file_proker : string
  + created_at : timestamp
  + updated_at : timestamp
  --
  ' Computed accessors
  + getTotalBobotAttribute() : int
  + getPersentaseCapaianAttribute() : float|null
  + getNamaDisplayAttribute() : string
  + getStatusBadgeAttribute() : string
  + getStatusTextAttribute() : string
  + getStatusPengajuanBadgeAttribute() : string
  + getStatusPengajuanTextAttribute() : string
  --
  {Relations}
  + kepengurusanLab() : BelongsTo
  + struktur() : BelongsTo
  + parameter() : HasMany<ProkerParameter>
  + dokumentasi() : HasMany<ProkerDokumentasi>
  + pjs() : HasMany<ProkerPj>
  + kegiatan() : HasMany<Kegiatan>
}

class ProkerParameter {
  # id : uuid <<PK>>
  --
  + proker_id : uuid <<FK>>
  + nama_parameter : string
  + bobot : smallint {0-100, total=100%}
  + capaian : smallint|null {0-100, diisi saat LPJ}
  + urutan : smallint
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + proker() : BelongsTo<Proker>
}

class ProkerPj {
  # id : uuid <<PK>>
  --
  + proker_id : uuid <<FK>>
  + user_id : uuid <<FK>>
  + created_at : timestamp
  + updated_at : timestamp
  --
  {unique proker_id + user_id}
  --
  {Relations}
  + proker() : BelongsTo<Proker>
  + user() : BelongsTo<User>
}

class ProkerDokumentasi {
  # id : uuid <<PK>>
  --
  + proker_id : uuid <<FK>>
  + judul : string
  + file_path : string
  + uploaded_by : uuid|null <<FK>>
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + proker() : BelongsTo<Proker>
  + uploader() : BelongsTo<User>
}

' ============================================================
' KEGIATAN
' ============================================================
class Kegiatan {
  # id : uuid <<PK>>
  --
  + proker_id : uuid <<FK>>
  + nama_kegiatan : string
  + deskripsi_kegiatan : text
  + tipe_kegiatan : string|null
  + lokasi : string|null
  + link_meeting : string|null
  + tanggal_mulai : date
  + tanggal_selesai : date
  + status_approval : enum {diajukan, disetujui, ditolak}
  + approved_by : uuid|null <<FK>>
  + approved_at : timestamp|null
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + proker() : BelongsTo<Proker>
  + approver() : BelongsTo<User>
  + laporanKegiatan() : HasMany<LaporanKegiatan>
  + peserta() : HasMany<KegiatanPeserta>
  + dokumentasiKegiatan() : HasMany<DokumentasiKegiatan>
}

class KegiatanPeserta {
  # id : uuid <<PK>>
  --
  + kegiatan_id : uuid <<FK>>
  + user_id : uuid <<FK>>
  + peran : enum {peserta, panitia}
  + is_lulus : boolean
  + no_sertifikat : string|null
  + file_sertifikat : string|null
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + kegiatan() : BelongsTo<Kegiatan>
  + user() : BelongsTo<User>
}

class LaporanKegiatan {
  # id : uuid <<PK>>
  --
  + kegiatan_id : uuid <<FK>>
  + jenis_laporan : varchar {bulanan, akhir, dll}
  + periode_bulan : integer|null
  + periode_tahun : integer|null
  + deskripsi_capaian : text
  + file_lpj : string|null
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + kegiatan() : BelongsTo<Kegiatan>
}

class DokumentasiKegiatan {
  # id : uuid <<PK>>
  --
  + kegiatan_id : uuid <<FK>>
  + judul : string
  + file_path : string
  + uploaded_by : uuid|null <<FK>>
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + kegiatan() : BelongsTo<Kegiatan>
  + uploader() : BelongsTo<User>
}

class SertifikatTemplate {
  # id : bigint <<PK>>
  --
  + kategori : string {kegiatan, praktikum, ...}
  + ref_id : uuid|null {FK ke entitas terkait}
  + nama : string
  + file_path : string
  + created_at : timestamp
  + updated_at : timestamp
  --
  {Relations}
  + ' Polymorphic via kategori + ref_id
}

' ============================================================
' PIKET (tidak berubah)
' ============================================================
class PeriodePiket {
  # id : bigint <<PK>>
  --
  + kepengurusan_lab_id : bigint <<FK>>
  + nama_periode : string
  + tanggal_mulai : date
  + tanggal_selesai : date
  + is_active : bool
  + created_at : timestamp
  + updated_at : timestamp
  --
  + activate() : void
  + isActive() : bool
  + isOngoing() : bool
  --
  {Relations}
  + kepengurusanLab() : BelongsTo
  + jadwalPiket() : HasMany
}

class JadwalPiket {
  # id : bigint <<PK>>
  --
  + periode_piket_id : bigint <<FK>>
  + user_id : bigint <<FK>>
  + hari : enum {senin, selasa, rabu, kamis, jumat}
  + jam_mulai : time
  + jam_selesai : time
  + created_at : timestamp
  + updated_at : timestamp
  --
  + isToday() : bool
  + getDuration() : int
  + canRequestGanti() : bool
  --
  {Relations}
  + periodePiket() : BelongsTo
  + user() : BelongsTo
  + gantiJadwal() : HasMany
  + absensi() : HasMany
}

class GantiJadwalPiket {
  # id : bigint <<PK>>
  --
  + jadwal_piket_id : bigint <<FK>>
  + requested_by : bigint <<FK>>
  + approved_by : bigint <<FK>>
  + alasan : text
  + status : enum {pending, approved, rejected}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + approve(approver_id : int) : void
  + reject(approver_id : int) : void
  + isPending() : bool
  --
  {Relations}
  + jadwalPiket() : BelongsTo
  + requester() : BelongsTo
  + approver() : BelongsTo
}

class AbsensiAslab {
  # id : bigint <<PK>>
  --
  + jadwal_piket_id : bigint <<FK>>
  + user_id : bigint <<FK>>
  + tanggal : date
  + jam_masuk : time
  + jam_keluar : time
  + status : enum {hadir, izin, alpha}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + checkIn() : void
  + checkOut() : void
  + calculateDuration() : int
  + isHadir() : bool
  --
  {Relations}
  + jadwalPiket() : BelongsTo
  + user() : BelongsTo
}

' ============================================================
' RELATIONSHIPS - PROKER
' ============================================================
Proker "1" *-- "*" ProkerParameter : parameter (ordered by urutan) >
Proker "1" *-- "*" ProkerPj : penanggung jawab >
Proker "1" *-- "*" ProkerDokumentasi : dokumentasi proker >
Proker "1" -- "*" Kegiatan : kegiatan terkait >

' ============================================================
' RELATIONSHIPS - KEGIATAN
' ============================================================
Kegiatan "1" *-- "*" KegiatanPeserta : peserta & panitia >
Kegiatan "1" *-- "*" LaporanKegiatan : laporan (LPJ) >
Kegiatan "1" *-- "*" DokumentasiKegiatan : dokumentasi kegiatan >
Kegiatan ..> SertifikatTemplate : uses (via kategori+ref_id) >

' ============================================================
' RELATIONSHIPS - PIKET
' ============================================================
PeriodePiket "1" -- "*" JadwalPiket : schedules >
JadwalPiket "1" -- "*" GantiJadwalPiket : can be swapped >
JadwalPiket "1" -- "*" AbsensiAslab : tracked by >

' ============================================================
' NOTES
' ============================================================
note top of Proker
  Alur Pengajuan:
  status_pengajuan: draft → diajukan → disetujui/ditolak
  Update progress (capaian/evaluasi/dokumentasi)
  hanya boleh jika status_pengajuan = 'disetujui'.
  Total bobot semua ProkerParameter harus = 100%.
end note

note top of Kegiatan
  Approval workflow:
  status_approval: diajukan → disetujui/ditolak
  tipe_kegiatan, lokasi, link_meeting ditambahkan Feb 2026.
  LPJ disimpan di LaporanKegiatan (terpisah dari Kegiatan).
end note

note right of KegiatanPeserta
  peran: peserta / panitia
  is_lulus: true setelah sertifikat di-generate
  no_sertifikat & file_sertifikat diisi
  saat generateCertificates()
end note

note bottom of ProkerParameter
  Weighted LPJ:
  persentase_capaian = Σ(bobot × capaian) / 100
  Controller: ProkerParameterController
end note

note bottom of JadwalPiket
  Schedule management:
  - One period can have multiple slots
  - Asisten can request swap
  - Admin approves swap
  - Attendance tracked
end note

note left of AbsensiAslab
  Check-in/Check-out system:
  1. Asisten checks in (jam_masuk)
  2. Asisten checks out (jam_keluar)
  3. Duration calculated
  4. Status: hadir if both exist
end note

@enduml

' ============================================
' PROGRAM KERJA
' ============================================
class Proker {
  # id : bigint
  --
  + kepengurusan_lab_id : bigint {FK}
  + struktur_id : bigint {FK}
  + nama_proker : string
  + deskripsi : text
  + file_path : string
  + status : enum {belum_mulai, berjalan, selesai}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + updateStatus(status : string) : void
  + isSelesai() : bool
  + getProgress() : int
  --
  {Relations}
  + kepengurusanLab() : BelongsTo
  + struktur() : BelongsTo
  + kegiatan() : HasMany
}

' ============================================
' KEGIATAN
' ============================================
class Kegiatan {
  # id : bigint
  --
  + proker_id : bigint {FK}
  + nama_kegiatan : string
  + deskripsi : text
  + tanggal_mulai : date
  + tanggal_selesai : date
  + tempat : string
  + status : enum {diajukan, disetujui, ditolak, selesai}
  + approved_by : bigint {FK}
  + file_lpj : string
  + created_at : timestamp
  + updated_at : timestamp
  --
  + approve(approver_id : int) : void
  + reject(approver_id : int, alasan : string) : void
  + uploadLPJ(file : UploadedFile) : void
  + isDiajukan() : bool
  + isDisetujui() : bool
  + canGenerateCertificate() : bool
  --
  {Relations}
  + proker() : BelongsTo
  + approver() : BelongsTo
  + peserta() : HasMany
  + templates() : HasMany
}

class KegiatanPeserta {
  # id : bigint
  --
  + kegiatan_id : bigint {FK}
  + user_id : bigint {FK}
  + jenis : enum {peserta, panitia}
  + no_sertifikat : string
  + file_sertifikat : string
  + created_at : timestamp
  + updated_at : timestamp
  --
  + isPeserta() : bool
  + isPanitia() : bool
  + hasCertificate() : bool
  --
  {Relations}
  + kegiatan() : BelongsTo
  + user() : BelongsTo
}

class SertifikatTemplate {
  # id : bigint
  --
  + kegiatan_id : bigint {FK}
  + nama_template : string
  + file_path : string
  + jenis : enum {peserta, panitia}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + getFullPath() : string
  --
  {Relations}
  + kegiatan() : BelongsTo
}

' ============================================
' PIKET
' ============================================
class PeriodePiket {
  # id : bigint
  --
  + kepengurusan_lab_id : bigint {FK}
  + nama_periode : string
  + tanggal_mulai : date
  + tanggal_selesai : date
  + is_active : bool
  + created_at : timestamp
  + updated_at : timestamp
  --
  + activate() : void
  + isActive() : bool
  + isOngoing() : bool
  --
  {Relations}
  + kepengurusanLab() : BelongsTo
  + jadwalPiket() : HasMany
}

class JadwalPiket {
  # id : bigint
  --
  + periode_piket_id : bigint {FK}
  + user_id : bigint {FK}
  + hari : enum {senin, selasa, rabu, kamis, jumat}
  + jam_mulai : time
  + jam_selesai : time
  + created_at : timestamp
  + updated_at : timestamp
  --
  + isToday() : bool
  + getDuration() : int
  + canRequestGanti() : bool
  --
  {Relations}
  + periodePiket() : BelongsTo
  + user() : BelongsTo
  + gantiJadwal() : HasMany
  + absensi() : HasMany
}

class GantiJadwalPiket {
  # id : bigint
  --
  + jadwal_piket_id : bigint {FK}
  + requested_by : bigint {FK}
  + approved_by : bigint {FK}
  + alasan : text
  + status : enum {pending, approved, rejected}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + approve(approver_id : int) : void
  + reject(approver_id : int) : void
  + isPending() : bool
  --
  {Relations}
  + jadwalPiket() : BelongsTo
  + requester() : BelongsTo
  + approver() : BelongsTo
}

class AbsensiAslab {
  # id : bigint
  --
  + jadwal_piket_id : bigint {FK}
  + user_id : bigint {FK}
  + tanggal : date
  + jam_masuk : time
  + jam_keluar : time
  + status : enum {hadir, izin, alpha}
  + created_at : timestamp
  + updated_at : timestamp
  --
  + checkIn() : void
  + checkOut() : void
  + calculateDuration() : int
  + isHadir() : bool
  --
  {Relations}
  + jadwalPiket() : BelongsTo
  + user() : BelongsTo
}

' ============================================
' RELATIONSHIPS
' ============================================
Proker "1" -- "*" Kegiatan : contains >
Kegiatan "1" -- "*" KegiatanPeserta : has >
Kegiatan "1" -- "*" SertifikatTemplate : uses >

PeriodePiket "1" -- "*" JadwalPiket : schedules >
JadwalPiket "1" -- "*" GantiJadwalPiket : can be swapped >
JadwalPiket "1" -- "*" AbsensiAslab : tracked by >

note top of Kegiatan
  Approval workflow required.
  Status: diajukan → disetujui/ditolak
  After selesai: upload LPJ
  Then generate certificates
end note

note right of KegiatanPeserta
  Dual role support:
  - Peserta: participants
  - Panitia: committee
  Each gets different certificate
end note

note bottom of JadwalPiket
  Schedule management:
  - One period can have multiple slots
  - Asisten can request swap
  - Admin approves swap
  - Attendance tracked
end note

note left of AbsensiAslab
  Check-in/Check-out system:
  1. Asisten checks in (jam_masuk)
  2. Asisten checks out (jam_keluar)
  3. Duration calculated
  4. Status: hadir if both exist
end note

@enduml
